<resources>
    <string name="app_name" translatable="false">KURSOVAYA</string>
    <string name="mainName" translatable="false">EasyDishes</string>
    <string name="login_hint">Введите логин</string>
    <string name="password_hint">Введите пароль</string>
    <string name="password_repeat_hint">Повторите пароль</string>
    <string name="authentication">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="button_continue">Продолжить</string>
    <string name="singup_hint">Нет аккаунта? Создайте сейчас!</string>
    <string name="log_in_hint">Есть аккаунт? Войдите сейчас!</string>
    <string name="hint_by_name">Поиск по названию</string>
    <string name="hint_by_ingredients">Поиск по ингредиентам</string>
    <string name="errorText">Ошибка</string>
    <string name="dish_icon">Иконка</string>
    <string name="composition_title">Состав:</string>
    <string name="recipe_text">Рецепт:</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="content_error">Content_error</string>
    <string name="return_button">Назад</string>
</resources>