<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_dish_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_shape"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainApplicationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/mainName"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_img_reset"
        android:contentDescription="@string/errorText"
        android:onClick="finishProcess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/ic_auth_bg"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_marginBottom="150dp">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/authentication"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/login_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/loginPasswordText"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <android.widget.Button
            android:id="@+id/loginButtonContinue"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_btn_continue"
            android:onClick="startNewActivity"
            android:text="@string/button_continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/singupHint"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:onClick="changeToSingup"
            android:text="@string/singup_hint"
            android:textColor="@color/hint_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/singupLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/ic_auth_bg"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_marginBottom="100dp">

        <TextView
            android:id="@+id/singupTextView"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/registration"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/singupLoginText"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/login_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/singupPasswordText"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/singupPasswordRepeatText"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/password_repeat_hint"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <android.widget.Button
            android:id="@+id/singupButtonContinue"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_btn_continue"
            android:onClick="startNewActivity"
            android:text="@string/button_continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/loginHint"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:onClick="changeToLogin"
            android:text="@string/log_in_hint"
            android:textColor="@color/hint_color"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>