<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_dish_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_shape"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainApplicationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/mainName"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="5dp"
            android:background="@color/low_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/ic_img_reset"
                    android:contentDescription="@string/errorText"
                    android:onClick="finishProcess" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:gravity="center"
                    android:text="@string/exit"
                    android:textColor="@color/low_divider"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:id="@+id/vertical_divider1"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/low_divider" />

            <SearchView
                android:id="@+id/search_composition"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/ic_corners"
                android:backgroundTint="@color/white"
                android:focusableInTouchMode="true"
                android:iconifiedByDefault="false"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:queryBackground="@android:color/transparent"
                android:queryHint="@string/hint_by_ingredients" />

            <View
                android:id="@+id/vertical_divider2"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/low_divider" />

            <android.widget.Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/low_divider"
                android:onClick="backToAuthentication"
                android:text="@string/return_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/low_divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/low_divider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <SearchView
                android:id="@+id/search_name"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/ic_corners"
                android:backgroundTint="@color/white"
                android:focusableInTouchMode="true"
                android:iconifiedByDefault="false"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:queryBackground="@android:color/transparent"
                android:queryHint="@string/hint_by_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#D09EF6"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/_134131" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
